# video-writer

./: .gitignore  CMakeLists.txt  encode_video  vwriter
src/: encode_video.cpp  main.cpp  new_video_writer.cpp  new_video_writer.h  vwutils.cpp  vwutils.h
